Added docker compose file for postgres database. Added application frontend. Added test data to changelogs. Fixes to backend logic. Added backend tests. Added frontend tests for FilterService and filters-list component.